style and text edits

--- a/index.html
+++ b/index.html
@@ -33,16 +33,28 @@
       background-color: #2f2f2f;
       color: #ffffff;
     }
+    .img-responsive {
+      margin-bottom:20px;
+    }
     </style>
   </head>
   <body>
     <div class="container">
       <div class="row">
+        <div class="col-xs-4 col-sm-5">
+        </div>
+        <div class="col-xs-4 col-sm-2">
+          <img src="Wikipedia-logo-v2.svg.png" class="img-responsive" alt="Responsive image" />
+        </div>
+        <div class="col-xs-4 col-sm-5">
+        </div>
+      </div>
+      <div class="row">
         <div class="col-sm-2">
         </div>
         <div class="col-sm-8">
           <h5 class="text-uppercase">Should I edit my own Wikipedia page?</h5>
-          <div class="jumbotron"><h1>No. You really, really should not.</h1></div>
+          <h1>No. You really, really should not.</h1>
         </div>
         <div class="col-sm-2">
         </div>
@@ -52,6 +64,11 @@
         </div>
         <div class="col-sm-8">
           <p class="lead">It's a pretty horrible idea. Here's why:</p>
+          <p>Okay, so you're a public figure, or maybe you work for a big brand. And you figure you'll go to Wikipedia to check out what the article about you says.</p>
+
+          <p>And you look, and you realize something is totally inaccurate—or worse, unflattering! And so you say to yourself, <em>"I'm just going to fix it."</em></p>
+
+          <p><strong>STOP. That's a bad idea.</strong></p>
           <p>Plaid asymmetrical cray bicycle rights direct trade viral, lomo affogato PBR&B taxidermy keytar ramps vice gastropub kogi. Slow-carb shoreditch try-hard flexitarian retro. Selvage ramps helvetica hoodie tilde, hell of migas selfies polaroid salvia distillery kitsch skateboard bitters. XOXO everyday carry flannel live-edge chambray. Wayfarers trust fund banjo mumblecore four dollar toast chambray pok pok photo booth, kogi viral succulents +1 leggings raw denim biodiesel. Pitchfork plaid flexitarian marfa, salvia cliche intelligentsia taxidermy snackwave beard tilde. Selvage green juice lo-fi meggings.</p>
           <p>Pour-over plaid williamsburg, bicycle rights everyday carry PBR&B disrupt lumbersexual asymmetrical next level 3 wolf moon wayfarers woke. Selfies bushwick XOXO synth heirloom. Pork belly vape tattooed, umami cliche aesthetic post-ironic fashion axe banh mi drinking vinegar. Food truck you probably haven't heard of them meditation disrupt fixie. Cold-pressed yuccie cronut, direct trade hella paleo chicharrones aesthetic master cleanse authentic shoreditch. Put a bird on it flannel lo-fi mixtape edison bulb direct trade. Mlkshk you probably haven't heard of them readymade craft beer, swag YOLO lomo skateboard letterpress hexagon.</p>
         </div>
