emoji, gif updates

--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-
-
+    <!--  Local CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <!--  Local CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/stylesheet.css">
   </head>
   <body>
     <header class="container-fluid bg-4 text-center"> 
@@ -58,13 +56,12 @@
         <div class="col-sm-8">
           
           <p class="lead">It looks kinda sneaky. You'll get caught. It'll be embarrassing for you.</p>
-          <p><img src="img/wikipedia-house-of-lies.gif" class="img-responsive center-block" ></p>
           <p>Okay, so you're a public figure, or maybe you work for a big brand. And you figure you'll go to Wikipedia to check out what the article about you says.</p>
 
           <p>And you look, and you realize something is totally inaccurate—or worse, unflattering! And so you say to yourself, <em>"I'm just going to fix it."</em></p>
 
           <p><strong>Stop right there. Here are a few reasons you maybe shouldn't do that.</strong></p>
-
+          <p><img src="img/wikipedia-hol.gif" class="img-responsive center-block" ></p>
           <p><em>Already convinced? <a href="#alternatives">Here are some things you can do instead</a>.</em>
         </div>
         <div class="col-sm-2">
@@ -147,7 +144,7 @@
         <div class="col-sm-2">
         </div>
         <div class="col-sm-8"> 
-        <h4 class="text-center">I bet you just learned a lot, right?</h4> 
+        <h4 class="text-center">I bet you just learned a lot, right? <i class="em em-dizzy"></i></h4> 
         <h4 class="text-center">Do smart things on the internet. Come chat with us.</h4> 
         <p class="text-center"><strong>(We don't bite.)</strong></p>
         <p class="text-center"><a class="btn btn-primary btn-lg" role="button" href="mailto:ezra@precisionstrategies.com">Get In Touch</a></p>
