--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
         </div>
         <div class="col-xs-4 col-sm-5">
         </div>
-      </div>
+      </div>   
       <div class="row">
         <div class="col-sm-2">
         </div>
         <div class="col-sm-8">
-          <!-- <h5 class="text-uppercase">Should I edit my own Wikipedia page?</h5>
-          <h1>No. You really, really should not.</h1> -->
           <h1>Here's why you shouldn't edit your own Wikipedia page.</h1>
+          <p class="lead">It looks kinda sneaky. You'll get caught. It'll be embarrassing for you.</p>
         </div>
         <div class="col-sm-2">
         </div>
@@ -54,8 +53,6 @@
         <div class="col-sm-2">
         </div>
         <div class="col-sm-8">
-          
-          <p class="lead">It looks kinda sneaky. You'll get caught. It'll be embarrassing for you.</p>
           <p>Okay, so you're a public figure, or maybe you work for a big brand. And you figure you'll go to Wikipedia to check out what the article about you says.</p>
 
           <p>And you look, and you realize something is totally inaccurate—or worse, unflattering! And so you say to yourself, <em>"I'm just going to fix it."</em></p>
@@ -136,22 +133,24 @@
               <li>Hell, do interviews and profiles with news outlets where you talk specifically about the very items you wish were covered in your page.</li></ul>
             </li>
             </ol>
-          </div>
+        </div>
         <div class="col-sm-2">
         </div>
       </div>       
       <div class="row">
         <div class="col-sm-2">
         </div>
-        <div class="col-sm-8"> 
-        <h4 class="text-center">I bet you just learned a lot, right? <i class="em em-dizzy"></i></h4> 
-        <h4 class="text-center">Do smart things on the internet. Come chat with us.</h4> 
-        <p class="text-center"><strong>(We don't bite.)</strong></p>
-        <p class="text-center"><a class="btn btn-primary btn-lg" role="button" href="mailto:ezra@precisionstrategies.com">Get In Touch</a></p>
+        <div class="col-sm-8">
+          <div class="jumbotron">
+            <h2>I bet you just learned a lot, right? <i class="em em-dizzy"></i></h2> 
+            <p class="lead">Do smart things on the internet.</p>
+            <p class="lead">Come chat with Precision Strategies.</p>
+            <p><a class="btn btn-primary btn-lg" role="button" href="mailto:ezra@precisionstrategies.com">Get In Touch</a></p>
+          </div>
         </div>
         <div class="col-sm-2">
         </div>
-      </div>
+      </div>       
     </div>
     <footer class="container-fluid bg-4 text-center"> 
         <!--<h4>Still have questions? Get in touch with Precision Strategies.</h4>-->
