small html fixes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p>Leaving aside the clear conflict of interest (that you're <em>supposed</em> to be disclosing who you are if you're editing with a conflict of interest), your edit will be reviewed by a team of volunteer editors on the site, and every edit you make is publicly logged.</p>
           <p>Your IP address and other information about you may wind up public, and... you just might get caught.</p> 
           <p>Think it can't happen to you?</p>
-          <p>Wikipedia <a href="https://en.wikipedia.org/wiki/Conflict-of-interest_editing_on_Wikipedia">keeps a list</a> of all the people who have been caught self-editing—including the founder of Wikipedia Jimmy Wales himself.
+          <p>Wikipedia <a href="https://en.wikipedia.org/wiki/Conflict-of-interest_editing_on_Wikipedia">keeps a list</a> of all the people who have been caught self-editing—including the founder of Wikipedia Jimmy Wales himself.</p>
 
           <p><strong>There's even a Twitter account that tracks every edit made by U.S. Congressional staffers:</strong></p>
           <div class="twitter-embed center-block">
@@ -93,6 +93,8 @@
           <p><strong>So ask yourself—is the potential backfire worth it?</strong></p>
           <p><img src="img/thinking.gif" class="img-responsive center-block" ></p>
         </div>
+        </div>
+        <div class="featurette">
         <div class="container">
           <h3 id="alternatives">But something is <em><strong>wrong</strong></em> about me on the internet. How do I fix it?</h3>
           <p class="lead">If you think something on your Wikipedia page desperately needs changing, you probably have bigger issues. <a href="#contact">Let us help</a>.</p>
