breakpoint edits, button colors, robots.txt

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
   </head>
   <body>
-    <header class="container-fluid bg-4 text-center"> 
+    <header class="container-fluid ribbon text-center"> 
         <p class="lead">A public service from the fine folk at Precision Strategies.</p>
     </header>
     <div class="jumbotron">
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-    <footer class="container-fluid bg-4 text-center"> 
+    <footer class="container-fluid ribbon text-center"> 
         <!--<h4>Still have questions? Get in touch with Precision Strategies.</h4>-->
         <p>Built to (lovingly) shame potential clients by <a href="http://www.twitter.com/ezramechaber">Ezra Mechaber</a>.</p>
     </footer>
