--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Should I Edit My Own Wikipedia Page?</title>
+
+    <!-- Social graph tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@precisionstrat">
+    <meta name="twitter:title" content="Should I Edit My Own Wikipedia Page?">
+    <meta name="twitter:description" content="No.">
+    <meta name="twitter:image" content="">
+    <meta property="og:title" content="Should I Edit My Own Wikipedia Page?">
+    <meta property="og:description" content="No.">
+    <meta property="og:url" content="http://shouldieditmyownwikipediapage.com">
+    <meta property="og:image" content="">        
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
     <!--  Local CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -46,10 +56,9 @@
     </div>
     <div class="featurette">
     <div class="container">
-          <p class="lead">Okay, so you're a public figure, or maybe you work for a big brand. And you figure you'll go to Wikipedia to check out what the article about you says.</p>
-
-          <p>And you look, and you realize something is totally inaccurate—or worse, unflattering! And so you say to yourself, <em>"I'm just going to fix it."</em></p>
-
+          <p class="lead">Okay, so you're a public figure, or maybe you work for a big brand. And you figure you'll go to Wikipedia to check out the article about you.</p>
+          <p>And you look, and you realize something is totally inaccurate—or worse, unflattering!</p>
+          <p>And so you say to yourself, "I'm just going to fix it."</p>
           <p><strong>Stop right there. Here are a few reasons you maybe shouldn't do that.</strong></p>
           <p><img src="img/wikipedia-hol.gif" class="img-responsive center-block" ></p>
           <p><em>Already convinced? <a href="#alternatives">Here are some things you can do instead</a>.</em></p>
@@ -84,7 +93,6 @@
           <p>Your IP address and other information about you may wind up public, and... you just might get caught.</p> 
           <p>Think it can't happen to you?</p>
           <p>Wikipedia <a href="https://en.wikipedia.org/wiki/Conflict-of-interest_editing_on_Wikipedia">keeps a list</a> of all the people who have been caught self-editing—including the founder of Wikipedia Jimmy Wales himself.</p>
-
           <p><strong>There's even a Twitter account that tracks every edit made by U.S. Congressional staffers:</strong></p>
           <div class="twitter-embed center-block">
           <a class="twitter-timeline" data-height="500" data-theme="light" href="https://twitter.com/congressedits">Tweets by congressedits</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -98,7 +106,6 @@
         <div class="container">
           <h3 id="alternatives">But something is <em><strong>wrong</strong></em> about me on the internet. How do I fix it?</h3>
           <p class="lead">If you think something on your Wikipedia page desperately needs changing, you probably have bigger issues. <a href="#contact">Let us help</a>.</p>
-
           <p>But if it really is just something small, here are a few things you can do instead of sneakily trying to edit your own Wikipedia page:</p>
           <ol>
             <li><strong>Edit honestly and openly:</strong> If you absolutely have to edit your Wikipedia page, do it <em>openly</em>. Say who you are, back up your sources, and be ready to engage in the Talk section of your article. But be prepared for community editors to reject your edits, especially if they're subjective or tonal edits.</li>
