One last change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="featurette">
     <div class="container">
           <p class="lead">Okay, so you're a public figure, or maybe you work for a big brand. And you go to Wikipedia to check out the article about you.</p>
-          <p>And you look, and you realize something is totally inaccurate—or worse, unflattering!</p>
+          <p>And you look, and you realize something is totally unfair</p>
           <p>And so you say to yourself, "I'm just going to fix it."</p>
           <p><strong>Stop. Right. There.</strong></p> 
           <p><strong>There are a few reasons you maybe shouldn't do that.</strong></p>
