Small formatting tweaks

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p><strong>Stop. Right. There.</strong></p>
           <p><strong>There are a few reasons you shouldn't do that.</strong></p>
           <p><img src="img/wikipedia-hol.gif" class="img-responsive center-block" ></p>
-          <p><em>Already convinced? You can skip this next part. <a href="#alternatives">Here are some things you can do instead to fix your article</a>.</em></p>
+          <h4>Already convinced? You can skip this next part. <a href="#help">Here are some things you can do to look out for your brand online</a>.</h4>
     </div>
     </div>
     <div class="featurette">
@@ -129,9 +129,9 @@
 
             Think about where you are online, and what you're putting out there. Does it reflect you and your brand? Does your target audience hang out there? What could you be doing better to capture their attention, and tell them something valuable?</p>
 
-            <p><strong>Put together a good communications strategy:</strong> One that gets across what your Wikipedia page is missing. Do interviews and profiles with news outlets, partner with people or organizations you admire, and try to get noticed—for good things. It may seem counterintuitive, but more publicity—if it's the right publicity—can improve your brand's image organically. No cloak-and-dagger Wikipedia editing required.</p>
+            <p><strong>Put together a good communications strategy:</strong> One that gets across what your Wikipedia page is missing. Do interviews and profiles with news outlets, partner with people or organizations you admire, and try to get noticed—for good things. It may seem counterintuitive, but more publicity—if it's the right publicity—can improve your brand's image organically. No cloak-and-dagger Wikipedia editing required.</p><br>
 
-            <p><em>Need a little bit more help? Want to produce great organic content? Have a specific goal in mind for your social strategy? Have a full on communications crisis? That's what we're here for.</em></p>
+            <h4>Need a little bit more help? Want to produce great organic content? Have a specific goal in mind for your social strategy? Have a full on communications crisis? That's what we're here for.</h4>
         </div>
         </div>
       <div class="jumbotron closing">
