down arrow emoji

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <p><strong>Put together a good communications strategy:</strong> One that gets across what your Wikipedia page is missing. Do interviews and profiles with news outlets, partner with people or organizations you admire, and try to get noticed—for good things. It may seem counterintuitive, but more publicity—if it's the right publicity—can improve your brand's image organically. No cloak-and-dagger Wikipedia editing required.</p><br>
 
-            <h4>Need a little bit more help? Want to produce great organic content? Have a specific goal in mind for your social strategy? Have a full on communications crisis? That's what we're here for.</h4>
+            <h4>Need a little bit more help? Want to produce great organic content? Have a specific goal in mind for your social strategy? Have a full on communications crisis?<br>That's what we're here for. <i class="em em-arrow_down"></i></h4>
         </div>
         </div>
       <div class="jumbotron closing">
