twitter image card fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:site" content="@precisionstrat">
     <meta name="twitter:title" content="Should I Edit My Own Wikipedia Page?">
     <meta name="twitter:description" content="No.">
-    <meta name="twitter:image" content="img/link-card-twitter.png">
+    <meta name="twitter:image" content="http://shouldieditmyownwikipediapage.com/img/link-card-twitter.png">
     <meta property="og:title" content="Should I Edit My Own Wikipedia Page?">
     <meta property="og:description" content="No.">
     <meta property="og:url" content="http://shouldieditmyownwikipediapage.com">
