--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
               <h2>You just learned a lot, right? <i class="em em-dizzy"></i></h2>
               <p class="lead">But there's a lot more to doing smart things on the internet.</p>
               <p class="lead">Come chat with <a href="http://www.precisionstrategies.com" style="color:#de4400;">Precision Strategies</a>: From digital, to data, to crisis communications, we're here to help.</p>
-              <p><a class="btn btn-primary btn-lg" role="button" href="mailto:ezra@precisionstrategies.com">Get In Touch</a></p>
+              <p><a class="btn btn-primary btn-lg" role="button" href="mailto:erin@precisionstrategies.com?subject=Wikipedia">Get In Touch</a></p>
         </div>
         </div>
       </div>
