Adjusted meta tags

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109696628-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+function gtag() {
+  dataLayer.push(arguments);
+}
+gtag("js", new Date());
 
-      gtag('config', 'UA-109696628-1');
-    </script>
+gtag("config", "UA-109696628-1");
+</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Should I Edit My Own Wikipedia Page?</title>
+    <meta name="description" content="You shouldn't edit your own Wikipedia page. It looks sneaky. You'll get caught. It'll be embarrassing.">
 
     <!-- Social graph tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -45,9 +48,9 @@
     <![endif]-->
   </head>
   <body>
-    <header class="container-fluid ribbon text-center">
+    <!-- <header class="container-fluid ribbon text-center">
         <p class="lead">A public service from the fine folk at Precision Strategies.</p>
-    </header>
+    </header> -->
     <div class="jumbotron">
     <div class="container">
           <div class="row">
